--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -413,6 +413,9 @@ body {
   color: $white;
   padding-bottom: 4rem;
   padding-left: 2rem;
+  @include breakpoint(small only) {
+    padding-left: 0;
+  }
 
   h3 {
     margin-bottom: 2rem;
