--- a/_css/components/_mailchimp.scss
+++ b/_css/components/_mailchimp.scss
@@ -1,5 +1,5 @@
 .partner-registration-form {
-  background: transparent;
+  background: transparent !important;
 
   .mc-field-group {
     padding-bottom: 0 !important;
@@ -64,7 +64,7 @@
     font-size: 12px;
     line-height: 12px;
     font-family: $font-lato;
-    width: auto;
+    width: auto !important;
     margin-top: 3rem;
     min-width: 90px;
   }
